Fixed bug with images wheen scaling to medium screens, changed border radius, added this website as a project, and changed the colors of links and the submit button to fix contrast errors

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,10 @@
   --pink: #d86ceb;
 }
 
+.link {
+  color: var(--pink);
+}
+
 .container {
   background-color: var(--dark-gray);
 }
@@ -52,7 +56,7 @@
 
 .section {
   background-color: var(--dark-gray);
-  border-radius: 0.4em;
+  border-radius: 0.6em;
   padding: 1.5em;
   margin: 0;
   color: var(--white);
@@ -63,6 +67,13 @@
   font-weight: bold;
   font-size: 1.4em;
   padding: 1.2em;
+}
+
+/* Class used to prevent bootstrap-grid from stretching images */
+.image-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /* Used for the form text boxes */
@@ -80,7 +91,9 @@
   width: 49%;
   background-color: var(--pink);
   border-color: var(--pink);
+  color: var(--dark-gray);
   margin: 0 2px 0 2px;
+  font-weight: bold;
 }
 
 .submit:hover {
@@ -93,6 +106,7 @@
   color: var(--pink);
   border-color: var(--pink);
   margin: 0 2px 0 2px;
+  font-weight: bold;
 }
 
 .reset:hover {
